--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -784,9 +784,6 @@
     margin-left: -6px;
     box-sizing: content-box;
   }
-  .sline .supendTools,.hline .supendTools{
-    display: none!important;
-  }
 /*-----------课程分类---------------*/
 	.addcoursetype{
 		width:200px;
@@ -2332,3 +2329,87 @@
   .registerEvent,.getUserNameEvent,.loginEvent{
     cursor: pointer;
   }
+  /* 分类module */
+  .taxonomycont{
+    width: 100%;
+    height: auto;
+    background: #F6F6F6;
+    float: none;
+    display: block;
+
+  }
+  .taxonomycont .fl{
+    float: left;
+    display: inline;
+  }
+  .taxonomycont a.courselist{
+    font-size: 15px;
+    color: #666;
+    margin: 0 15px;
+    margin-top: 15px;
+    display: inline-block;
+    text-decoration: none;
+  }
+  .taxonomycont a.courselist:hover,.taxonomycont  a.courselist.onhover {
+      color: #338bff;
+  }
+  .taxonomycont .allson {
+    width: 100%;
+    padding-bottom: 20px;
+    overflow: hidden;
+  }
+  .taxonomycont .allsondouble{
+    background: #fdfdfd;
+    width: 100%;
+    padding-bottom: 20px;
+    padding-left: 15px;
+    overflow: hidden;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box; /* Firefox */
+    -webkit-box-sizing:border-box; /* Safari */
+  }
+
+
+  /* 登录框 */
+  .username,.password{
+    width: 200px;
+    height: 36px;
+    border:1px solid #666;
+    background: inherit;
+  }
+  .username input,.password  input{
+    width: 100%;
+    height: 100%;
+    border:0;
+    background: inherit;
+    font-size: inherit;
+    color: inherit;
+    padding-left: 5px;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box; /* Firefox */
+    -webkit-box-sizing:border-box; /* Safari */
+  }
+  .loginbutton{
+    width: 200px;
+    height: 40px;
+    background: #338bff;
+    color: #fff;
+    border-radius: 4px;
+  }
+  .loginbutton input{
+    width: 100%;
+    height: 100%;
+    border: medium none;
+    cursor: pointer;
+    font-size: inherit;
+    line-height: inherit;
+    overflow: hidden;
+    color: inherit;
+    background: inherit;
+    border-radius: inherit;
+    font-family: -apple-system, "SF UI Text", "Helvetica Neue", Arial, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Zen Hei", sans-serif;
+  }
+  input::-webkit-input-placeholder{color: inherit;font-size: inherit;}    /* 使用webkit内核的浏览器 */
+  input:-moz-placeholder{color: inherit;font-size: inherit;}                  /* Firefox版本4-18 */
+  input::-moz-placeholder{color: inherit;font-size: inherit;}                  /* Firefox版本19+ */
+  input:-ms-input-placeholder{color: inherit;font-size: inherit;}           /* IE浏览器 */
