--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -675,6 +675,42 @@
     margin-left: -6px;
     box-sizing: content-box;
   }
+/*-----------网校LOGO---------------*/
+	.schoollogo{
+		width: 220px;
+		height: 220px;
+	}
+	.schoollogo .picBox{
+		display: block;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+	}
+	.schoollogo img{
+		min-height: 100%; 
+	}
+/*-----------地图---------------*/	
+	.schoolmap{
+		width: 935px;
+		height: 325px;
+	}
+	#schoolmap{
+		height: 100%;
+	}
+/*-----------二维码---------------*/
+	.schoolqr{
+		width: 212px;
+		height: 212px;
+	}
+	.schoolqr .picBox{
+		display: block;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+	}
+	.schoolqr img{
+		min-height: 100%; 
+	}
 /*-----------课程分类---------------*/
 	.addcoursetype{
 		width:200px;
@@ -1853,30 +1889,30 @@
     cursor: pointer;
 	}
 	/*名师团队*/
-	.theteacherteam{
+	.teacher{
 		width: 247px;
 		height: 228px
 	}
-	.theteacherteam .addtheteateam{
+	.teacher .editAdd{
 		width: 100%;
 		height: 100%;
 	}
-	.theteacherteam .addtea-icon{
+	.teacher .addtea-icon{
 		width: 100%;
 		height: 100%;
 		background: url(icon/addtea.png) center center no-repeat;
-    background-size: 100% auto;
+    background-size: auto 100% ;
 	}
-	.theteacherteam .addtheteateam .team_bk {
+	.teacher .editAdd .team_bk {
     width: 100%;
     height: 100%;
     transition: all 0.45s ease-out 0s;
     position: relative;
 	}
-	.theteacherteam .addtheteateam  .team_mask {
+	.teacher .editAdd  .team_mask {
 		display: none;
 	}
-	.theteacherteam .addtheteateam  .team_bk:hover .team_mask {
+	.teacher .editAdd  .team_bk:hover .team_mask {
 		background: #8493af none repeat scroll 0 0;
 		opacity: 0.9;
 		display:block;
@@ -1896,26 +1932,26 @@
     overflow: hidden;
 		
 	}
-	.theteacherteam .addtheteateam  .team_hbj {
+	.teacher .editAdd  .team_hbj {
 	    height:169px;
 	    width:100%;
       padding-top:1px;
 	}
-	.theteacherteam .addtheteateam  .team_hbj img {
+	.teacher .editAdd  .team_hbj img {
 		border-radius:100%;
 		margin:10px auto;
     display: block;
 		width:98px;
 		height:98px;
 	}
-	.theteacherteam .addtheteateam  .team_h3 {
+	.teacher .editAdd  .team_h3 {
 		font-size:15px;
 		text-align:center;
 		width:100%;
 		overflow:hidden;
 		color:#333
 	}
-	.theteacherteam .addtheteateam  .team_p1 {
+	.teacher .editAdd  .team_p1 {
 		color:#999;
 		text-align:center;
 		width:100%;
@@ -1924,7 +1960,7 @@
 		margin-top:5px;
 		height: 20px;
 	}
-	.theteacherteam .addtheteateam  .team_p2 {
+	.teacher .editAdd  .team_p2 {
 		line-height:1.8;
     height: 44px;
 		text-align:left;
@@ -2351,30 +2387,37 @@
     width: 100%;
     display: block;
   }
-
+/* editAdd */
+  .module .editAdd{
+    width: 100%;
+    height: 100%;
+  }
+  .module .editAdd .add-icon{
+    width: 100%;
+    height: 100%;
+    background: url(icon/addtea.png) center center no-repeat;
+    background-size: 102% 102%;
+    border:1px solid #c0c0c0;
+    box-sizing: border-box;
+  }
+  .module .editAdd .add-icon:hover{
+    background-color: #169BD5;
+  }
+/* audition */
+  .audition {
+    width:190px;
+    height:120px;
+    cursor: pointer;
+  }
 /* course */
   .course{
     width: 260px;
     height: 220px;   
-    cursor: pointer;
+    cursor: pointer;        
   }
   .course .resize{
     display: none;
   }
-  .course .editCourse{
-    width: 100%;
-    height: 100%;
-    background-color: #F2F2F2;
-    font-size: 230px;
-    line-height: 220px;
-    color: #fff;
-    font-weight: 600;
-    text-align: center;
-    text-indent: 0;
-  }
-  /*  .course .editCourse:hover{
-    background-color: #169BD5;
-  }*/
   .course .imgbox {   
     padding: 10px;
     height: 140px;
@@ -2518,6 +2561,7 @@
   .rightMenu .title{
     float: left;
     width: 110px;
+    height: 40px;
     margin-left: 5px;
     font-size: 16px;
     line-height: 20px;
