--- a/src/assets/iconfont/maodaofont.css
+++ b/src/assets/iconfont/maodaofont.css
@@ -893,6 +893,25 @@ svg.icon {
 .icon-schoolProfile { background-image: url(../img/schoolProfile.png); background-size: 28px; }
 
 
+.icon-advert { background-image: url(../newslibIcon/advert.png); background-size: 26px 28px; }
+.icon-button { background-image: url(../newslibIcon/button.png); background-size: 28px auto; }
+.icon-carousel { background-image: url(../newslibIcon/carousel.png); background-size: 28px; }
+.icon-classify { background-image: url(../newslibIcon/classify.png); background-size: 23px auto; }
+.icon-information { background-image: url(../newslibIcon/information.png); background-size: 25px 25px; }
+.icon-level_Line { background-image: url(../newslibIcon/level_Line.png); background-size: 28px; }
+.icon-login { background-image: url(../newslibIcon/login.png); background-size: 25px 25px; }
+.icon-logo { background-image: url(../newslibIcon/logo.png); background-size: 28px; }
+.icon-map { background-image: url(../newslibIcon/map.png); background-size: 26px 25px; }
+.icon-picture { background-image: url(../newslibIcon/picture.png); background-size: 28px; }
+.icon-player { background-image: url(../newslibIcon/player.png); background-size: 28px; }
+.icon-QRcode { background-image: url(../newslibIcon/QRcode.png); background-size: 28px; }
+.icon-rectangle { background-image: url(../newslibIcon/rectangle.png); background-size: 28px; }
+.icon-round { background-image: url(../newslibIcon/round.png); background-size: 28px; }
+.icon-text { background-image: url(../newslibIcon/text.png); background-size: 28px; }
+.icon-vertical_Line { background-image: url(../newslibIcon/vertical_Line.png); background-size: auto 28px; }
+.icon-waiter { background-image: url(../newslibIcon/waiter.png); background-size: 28px; }
+.icon-weather { background-image: url(../newslibIcon/weather.png); background-size: 28px; }
+.icon-course { background-image: url(../newslibIcon/course.png); background-size: 28px auto; }
 
 @font-face {
 	font-family:Material Icons;font-style:normal;font-weight:400;src:local("Material Icons"),local("MaterialIcons-Regular"),url(material.570eb83859dc23dd0eec423a49e147fe.woff2) format("woff2"),url(material.012cf6a10129e2275d79d6adac7f3b02.woff) format("woff"),url(material.a37b0c01c0baf1888ca812cc0508f6e2.ttf) format("truetype")
