--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -443,6 +443,10 @@
     width: 190px;
     height: 120px;
   }
+  .audition .editAdd{
+    width: 100%;
+    height: 100%;
+  }
   .audition a{
     display: block;
     width: 100%;
@@ -2361,6 +2365,7 @@
     background-repeat: no-repeat;
     background-image: url(http://static.ebanhui.com/ebh/tpl/2016/images/kfico.png);
     cursor: pointer;
+    background-size: 20px;
   }
   .kf-top{
     margin-top: 3px;
@@ -2380,8 +2385,12 @@
     background-color: #F2F2F2;
   } 
   .advert .advCon{
-    width: 300px;
+    width:  100%;
     height: 100%;
+  }
+  .advert .advCon a{
+    width: 100%;
+    display: block;
   }
   .advert .advCon img{
     width: 100%;
