--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -580,7 +580,7 @@
   }
   .barbox{
     position: absolute;
-    bottom: 20px;
+    bottom: 5%;
     left: 50%;
     transform: translateX(-50%);
     -ms-transform:translateX(-50%);   
@@ -744,7 +744,7 @@
 /*-----------课程分类---------------*/
 	.addcoursetype{
 		width:200px;
-    height: 50px;
+    height: 340px;
     z-index: 98;
 	}
 	.courseclassification{
@@ -794,16 +794,19 @@
 		position: absolute;
 		left: 0px;
 		top: 50px;
-		display: none;
+		/* display: none; */
 		width: 100%;
 	}
-	#app .courseclassification .second_mune_ul{
-		display: none;
-	}
+  .courseclassification .second_mune_ul_none {
+    display: none;
+  }
+	/* #app .courseclassification .second_mune_ul{
+    display: none;
+  } */
 	.courseclassification .second_mune_ul li {
 		list-style: none;
 		width: 100%;
-		height: 65px;
+		height: 50px;
 		background-image: url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/rigico01.png);
 		background-repeat: no-repeat;
 		background-position: right 10px center;
@@ -942,8 +945,8 @@
 	.courseclassification .nav-first {
 		display: inline-block;
 		font-size: 15px;
-		height: 24px;
-		line-height: 24px;
+		height: 25px;
+		line-height: 25px;
 		padding: 5px 0px 0 0px;
 		text-indent: 10px;
 		width: 100%;
