--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -34,7 +34,7 @@
       height: 12px;
   }
   ::-webkit-scrollbar-track-piece{
-      background-color: #fff;
+      background-color: transparent;
     /*  -webkit-border-radius: 6px;*/
   }
   ::-webkit-scrollbar-thumb:vertical{
