--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -105,7 +105,7 @@
   .sline{
     max-width: 0px;
     width: 0px!important;
-    height: 200px;
+    height: 10rem;
     border: 0;
     border-top-width: 0px!important;
     border-left-width: 1px;
