--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -124,7 +124,22 @@
     padding: 0 5px;
     margin-left: -6px;
     box-sizing: content-box;
+  }  
+/* ------------- menubar ------------------- */
+  .menubar{
+    width: 1.33rem;
+    height: 1.33rem;
+    background-color: #f2f2f2;
   }
+  .menubar-icon{
+    width: 100%;
+    height: 100%;    
+    background-image: url(http://static.ebanhui.com/design/image/menu.png);
+    background-size: 0.5333rem auto;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
 /* ------------- 悬浮特效 --------------- */
   .enlarge img{
     transition: transform 0.3s;
